--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,36 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+body {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.search-form {
+  margin-bottom: 36px;
+}
+.search-form input[type="text"] {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 10px;
+  width: 371px;
+  font-size: 16px;
+  margin-right: 8px;
+  color: #808080;
+
+}
+.search-form button {
+color: #fff;
+font-size: 16px;
+border-radius: 8px;
+padding: 8px 16px;
+width: 91px;
+height: 40px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+background-color: #4e75ff;
+border: transparent;
+}
